fixed mobile overflow | tmpry disable particles

--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -7,11 +7,6 @@
   font-family: 'Roboto', sans-serif;
 }
 
-body {
-  overflow: hidden;
-  touch-action: none;
-}
-
 ::-webkit-scrollbar {
   width: 0;
 }
